# yowl

./: CITATION  COPYRIGHT  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: check.yml  scheduled.yml
benches/: benchmark.rs
src/: lib.rs
src/feature/: aliphatic.rs  aromatic.rs  atom_kind.rs  bond_kind.rs  bracket_aromatic.rs  bracket_symbol.rs  charge.rs  configuration.rs  element.rs  element_ext.rs  mod.rs  number.rs  rnum.rs  virtual_hydrogen.rs
src/graph/: atom.rs  bond.rs  builder.rs  error.rs  join_pool.rs  mod.rs  reconcile.rs
src/read/: error.rs  missing_character.rs  mod.rs  read.rs  read_bond.rs  read_bracket.rs  read_charge.rs  read_configuration.rs  read_organic.rs  read_rnum.rs  read_symbol.rs  reader.rs  scanner.rs  trace.rs
src/walk/: error.rs  follower.rs  mod.rs  walk.rs  walker.rs
src/write/: writer.rs
tests/: all_smiles  integration.rs  parse_smiles.py  parsed_smiles.smi
