[package]
name = "yowl"
version = "0.1.0"
license = "MIT"
description = "Primitives for reading and writing the SMILES language"
repository = "https://github.com/chem-william/yowl/"
keywords = ["chemistry", "parser", "smiles"]
categories = ["parser-implementations", "science", "text-processing"]
edition = "2021"
readme = "README.md"

[dependencies]
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"

# to appease -Zminimal-version
serde = { version = "1.0.100" }
regex = { version = "1.5.6" }

[[bench]]
name = "benchmark"
harness = false
