[package]
name = "yowl"
version = "0.4.0"
license = "MIT"
description = "Primitives for reading and writing the SMILES language"
repository = "https://github.com/chem-william/yowl/"
keywords = ["chemistry", "parser", "smiles"]
categories = ["parser-implementations", "science", "text-processing"]
edition = "2021"
readme = "README.md"

[dependencies]
mendeleev = "0.8.4"
thiserror = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.8.0"

[[bench]]
name = "benchmark"
harness = false

[lints.clippy]
single_char_pattern = "warn"
uninlined_format_args = "warn"
map_unwrap_or = "warn"
inefficient_to_string = "warn"
